--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.5.4",
-    "vercel": "^28.13.1"
+    "socket.io": "^4.5.4"
   }
 }
